[incubator-kie-issues#1150] Improve Import Resolver error messages to be more user friendly - Part II (#6025)